[tool.poetry]
name = "api_framework"
version = "0.1.0"
description = ""
authors = ["Lindon1228 <532215423@qq.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2"
requests = "^2.25"
numpy = "^1.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
